tests/types_first_lazy_suppressed/types_first_lazy_suppressed.exp
===== signature-verification error should not be reported, just the parsing error: =====
No errors!

The Flow server is currently in filesystem lazy mode and is only checking 0/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes


===== suppressed errors should not be reported after focus-checking fileA.js: =====
Error ----------------------------------------------------------------------------------------------- suppressed.js:4:21

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   4| export function foo(x): void {}
                          ^



Found 1 error

The Flow server is currently in filesystem lazy mode and is only checking 2/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
